--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<h1>Esto es una prueba para gitbut con ssh</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Uploader con JavaScript y PHP</title>
+</head>
+<body>
+    <h1>Uploader con JavaScript y PHP</h1>
+    
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
