--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Uploader con JavaScript y PHP</title>
 </head>
 <body>
-    <h1>Uploader con JavaScript y PHP</h1>
+
+    <main>
+        <h1>Uploader con JavaScript y PHP</h1>
+    </main>
     
 </body>
 </html>
